# obs-hymn-languages

./: .gitmodules  Cargo.toml  install_plugin_linux.sh
locale/: en-US.ini
src/: lib.rs
