[package]
name = "obs-hymn-languages"
version = "0.1.0"
edition = "2021"

[lib]
name = "obs_hymn_languages"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obs-wrapper = { version = "0.4.1", path = "rust-obs-plugins" }
